--- a/mathi/dripapp/static/contact.html
+++ b/mathi/dripapp/static/contact.html
@@ -13,7 +13,7 @@
             color: #333;
         }
         header {
-            background-color: #28a745;
+            background-color: #28a789;
             color: white;
             padding: 20px;
             text-align: center;
@@ -33,7 +33,7 @@
         section h2 {
             font-size: 2em;
             margin-bottom: 10px;
-            color: #28a745;
+            color: #85ad26;
         }
         section p {
             line-height: 1.6;
@@ -55,13 +55,13 @@
             font-size: 1em;
         }
         form button {
-            background-color: #28a745;
+            background-color: #18b8d8;
             color: white;
             border: none;
             cursor: pointer;
         }
         form button:hover {
-            background-color: #218838;
+            background-color: #2394a6;
         }
         footer {
             background-color: #333;
