--- a/mathi/dripapp/static/home.html
+++ b/mathi/dripapp/static/home.html
@@ -29,7 +29,7 @@
             margin: 10px 0 0;
         }
         nav {
-            background-color: #4CAF50;
+            background-color: #894caf;
             color: white;
             display: flex;
             justify-content: center;
@@ -82,8 +82,8 @@
         <h2>Gallery</h2>
         <p>Here are some breathtaking snapshots of nature:</p>
        
-        <img src="ai-generated-beautiful-nature-mountain-scenery-professionalgraphy-photo.jpg" alt="Nature Image 1" style="width:100%;max-width:600px;">
-        <img src="beautiful-nature-pictures-syv21loi30wdz7i2.jpg" alt="Nature Image 2" style="width:100%;max-width:600px;">
+        <img src="50 Magnificent Natural Landscape Photographs _ Envato Tuts+.jpg" alt="Nature Image 1" style="width:100%;max-width:600px;">
+        <img src="nature.jpg" alt="Nature Image 2" style="width:100%;max-width:600px;">
     </section>
     <section id="contact">
         <h2>Contact Us</h2>
