--- a/mathi/dripapp/static/service.html
+++ b/mathi/dripapp/static/service.html
@@ -13,7 +13,7 @@
             color: #333;
         }
         header {
-            background-color: #007BFF;
+            background-color: #26ff00;
             color: white;
             padding: 20px;
             text-align: center;
@@ -33,7 +33,7 @@
         section h2 {
             font-size: 2em;
             margin-bottom: 10px;
-            color: #007BFF;
+            color: #0048ff;
         }
         section p {
             line-height: 1.6;
