--- a/mathi/dripapp/static/OO.HTML
+++ b/mathi/dripapp/static/OO.HTML
@@ -1,9 +1,9 @@
 <STYLE>
 body {
-    background: linear-gradient(lightblue, teal);
+    background: linear-gradient(rgb(107, 192, 131), rgb(255, 255, 102));
   }
   .navbar {
-    background-color: #08C2FF;
+    background-color: #efff08;
   }
   .navbar .nav-link {
     color: white;
@@ -11,10 +11,10 @@ body {
     margin: 0 10px;
   }
   .navbar .nav-link:hover {
-    color: #16a085;
+    color: #1644a0;
   }
   .sorting-navbar {
-    background-color: #006BFF;
+    background-color: #9d00ff;
     color: white;
     padding: 10px 0;
   }
@@ -27,7 +27,7 @@ body {
     padding: 5px 15px;
   }
   .sorting-navbar .nav-link:hover {
-    background-color: #2c3e50;
+    background-color: #2f8e68;
     border-color: white;
   }
   .card {
@@ -48,13 +48,13 @@ body {
     border-top-right-radius: 15px;
   }
   .card-body {
-    background-color: #006BFF;
+    background-color: #00e5ff;
     color: white;
     text-align: center;
   }
   footer {
     margin-top: 50px;
-    background-color: #08C2FF;
+    background-color: #08fffb;
     color: white;
   }
   
@@ -70,7 +70,7 @@ body {
   
   /* Services Section */
   .services-section {
-    background-color: #1abc9c;
+    background-color: #1a70bc;
     color: white;
     padding: 50px 20px;
   }
@@ -139,7 +139,7 @@ body {
     <div class="row g-4">
       <div class="col-6 col-md-3">
         <div class="card">
-          <img src="ai-generated-beautiful-nature-mountain-scenery-professionalgraphy-photo.jpg" class="card-img-top" alt="Placeholder">
+          <img src="50 Magnificent Natural Landscape Photographs _ Envato Tuts+.jpg" class="card-img-top" alt="Placeholder">
           <div class="card-body">
             <h6 class="card-title">Card 1</h6>
           </div>
@@ -147,7 +147,7 @@ body {
       </div>
       <div class="col-6 col-md-3">
         <div class="card">
-          <img src="beautiful-nature-pictures-syv21loi30wdz7i2.jpg" class="card-img-top" alt="Placeholder">
+          <img src="infran nature.jpg" class="card-img-top" alt="Placeholder">
           <div class="card-body">
             <h6 class="card-title">Card 2</h6>
           </div>
@@ -155,7 +155,7 @@ body {
       </div>
       <div class="col-6 col-md-3">
         <div class="card">
-          <img src="beautiful-nature-scenery-wallpaper-view_1123191-729.avif" class="card-img-top" alt="Placeholder">
+          <img src="nat.jpg" class="card-img-top" alt="Placeholder">
           <div class="card-body">
             <h6 class="card-title">Card 3</h6>
           </div>
@@ -163,7 +163,7 @@ body {
       </div>
       <div class="col-6 col-md-3">
         <div class="card">
-          <img src="erawan-waterfall-thailand-beautiful-nature-background-42008912.webp" class="card-img-top" alt="Placeholder">
+          <img src="nature.jpg" class="card-img-top" alt="Placeholder">
           <div class="card-body">
             <h6 class="card-title">Card 4</h6>
           </div>
@@ -171,7 +171,7 @@ body {
       </div>
       <div class="col-6 col-md-3">
         <div class="card">
-          <img src="europe-croatia-plitvice-lakes-main-waterfalls-spring-small.jpg" class="card-img-top" alt="Placeholder">
+          <img src="naturekii.jpg" class="card-img-top" alt="Placeholder">
           <div class="card-body">
             <h6 class="card-title">Card 5</h6>
           </div>
@@ -179,7 +179,7 @@ body {
       </div>
       <div class="col-6 col-md-3">
         <div class="card">
-          <img src="landscape-sky-full-moon-seascape-to-night-serenity-nature-beautiful-view-sea-many-stars-attractive-dark-cloud-141554532.webp" class="card-img-top" alt="Placeholder">
+          <img src="naturemm.jpg" class="card-img-top" alt="Placeholder">
           <div class="card-body">
             <h6 class="card-title">Card 6</h6>
           </div>
@@ -187,7 +187,7 @@ body {
       </div>
       <div class="col-6 col-md-3">
         <div class="card">
-          <img src="pexels-pixabay-206359.jpg" class="card-img-top" alt="Placeholder">
+          <img src="nyey.jpg" class="card-img-top" alt="Placeholder">
           <div class="card-body">
             <h6 class="card-title">Card 7</h6>
           </div>
@@ -195,7 +195,7 @@ body {
       </div>
       <div class="col-6 col-md-3">
         <div class="card">
-          <img src="scenic-view-waterfall-rocks-autumn_1048944-14210465.avif" class="card-img-top" alt="Placeholder">
+          <img src="Perfect Reflections [Explored].jpg" class="card-img-top" alt="Placeholder">
           <div class="card-body">
             <h6 class="card-title">Card 8</h6>
           </div>
