--- a/mathi/dripapp/static/about.html
+++ b/mathi/dripapp/static/about.html
@@ -13,7 +13,7 @@
             color: #333;
         }
         header {
-            background-color: #4CAF50;
+            background-color: #d3d631;
             color: white;
             padding: 20px;
             text-align: center;
@@ -33,7 +33,7 @@
         section h2 {
             font-size: 2em;
             margin-bottom: 10px;
-            color: #4CAF50;
+            color: #92e918;
         }
         section p {
             line-height: 1.6;
